# ui-events

./: Cargo.toml  README.md
examples/: simple_client.rs
src/: event.rs  main.rs
src/platform/: linux.rs  macos.rs  mod.rs
ui-events/: Cargo.toml
ui-events-app/: package.json  vite.config.ts
ui-events-app/src/: App.css  App.tsx
ui-events-app/src-tauri/: Cargo.toml  tauri.conf.json
ui-events-app/src-tauri/src/: lib.rs  main.rs
ui-events/src/: error.rs  event.rs  lib.rs  server.rs
ui-events/src/platform/: macos.rs  mod.rs  windows.rs
