[workspace]
members = [
    "ui-events",
    "ui-events-app/src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["louis030195 <hi@louis030195.com>"]
description = ""
repository = "https://github.com/mediar-ai/ui-events"
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]


